--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
         "react-dom": "^18.2.0",
         "react-icons": "^4.7.1",
         "react-router-dom": "^6.6.2",
-        "sass": "^1.57.1"
+        "sass": "^1.57.1",
+        "swiper": "^8.4.6",
+        "uuid": "^9.0.0"
     },
     "devDependencies": {
         "@types/react": "^18.0.26",
